Fix CTA button alignment on mobile.

--- a/assets/scss/components/_carousel_header_full_width_classic.scss
+++ b/assets/scss/components/_carousel_header_full_width_classic.scss
@@ -239,6 +239,7 @@ $slide-transition-speed: 1s;
           text-align: center;
           max-width: 100%;
           padding-left: 0;
+          padding-right: 0;
 
           @include small-and-up {
             width: auto;
